story 3 phase 6